--- a/examples/sample-pr-manifest.json
+++ b/examples/sample-pr-manifest.json
@@ -3,7 +3,7 @@
   "ts": "2024-01-01T00:00:00Z",
   "task_id": "task-001",
   "producer": "leitwerk",
-  "digest": "sha256:sample",
+  "digest": "sha256:aaaaaaaaaaaaaaaa",
   "title": "Align artifact schema fields",
   "repos": ["metarepo", "chronik"],
   "policy_level": "konservativ",
