--- a/.github/workflows/guard-contracts-mirror.yml
+++ b/.github/workflows/guard-contracts-mirror.yml
@@ -13,9 +13,9 @@ jobs:
           fetch-depth: 0
       - name: Fetch base branch
         run: |
-          git fetch --no-tags --prune --depth=1 origin "${{ github.base_ref }}:refs/remotes/origin/${{ github.base_ref }}"
+          git fetch --no-tags --prune origin "${{ github.base_ref }}:refs/remotes/origin/${{ github.base_ref }}"
       - name: Guard contracts mirror
         env:
           BASE_REF: ${{ github.base_ref }}
           GITHUB_EVENT_PATH: ${{ github.event_path }}
-        run: scripts/guard_contracts_mirror.sh
+        run: bash scripts/guard_contracts_mirror.sh
